<resources>
    <string name="app_name">Cooking Recipe App</string>
    <string name="category_name">Category Name :</string>
    <string name="add_category">Add Category</string>
    <string name="put_category_name">Put Category Name</string>
    <string name="write_recipe_name_here">Write Recipe Name Here</string>
    <string name="recipe_name">Recipe Name :</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="category">Category</string>
    <string name="instruction">Instruction :</string>
    <string name="add_instruction">Add Instruction</string>
    <string name="write_instruction_here">Write Instruction Here</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="insert_name_of_ingredient">Insert Name of Ingredient</string>
    <string name="ingredient_name">Ingredient Name :</string>
    <string name="textview">TextView</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>

</resources>
