<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="117dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/recipe_name" />

        <Spinner
            android:id="@+id/comboBox"
            android:layout_width="112dp"
            android:layout_height="57dp"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/instruction" />

        <EditText
            android:id="@+id/instructionField1"
            android:layout_width="186dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/write_instruction_here"
            android:inputType="textPersonName"
            android:importantForAutofill="no" />
    </LinearLayout>

    <Button
        android:id="@+id/addinstructionButtoon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="instructionAction"
        android:text="@string/add_instruction" />
</LinearLayout>